--- a/package.json
+++ b/package.json
@@ -3,10 +3,12 @@
     "@hotwired/stimulus": "^3.0.1",
     "@hotwired/turbo-rails": "^7.1.1",
     "@tiptap/core": "^2.0.0-beta.174",
+    "@tiptap/extension-bubble-menu": "^2.0.0-beta.55",
+    "@tiptap/extension-underline": "^2.0.0-beta.23",
     "@tiptap/starter-kit": "^2.0.0-beta.183",
     "esbuild": "^0.14.28"
   },
   "scripts": {
-    "build": "esbuild app/javascript/documentation/*.* --bundle --sourcemap --outdir=app/assets/javascripts/documentation"
+    "build": "esbuild app/javascript/documentation/application.js --bundle --sourcemap --outdir=app/assets/javascripts/documentation"
   }
 }
