--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "@tiptap/extension-underline": "^2.0.0-beta.23",
     "@tiptap/starter-kit": "^2.0.0-beta.183",
     "esbuild": "^0.14.28",
-    "frontend-helpers": "https://github.com/Grupo-AFAL/frontend-helpers.git",
+    "frontend-helpers": "/Users/fede/code/grupoafal/frontend-helpers",
     "lodash.throttle": "^4.1.1",
     "tippy.js": "^6.3.7"
   },
