--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
     "@hotwired/turbo-rails": "^7.1.1",
     "@tiptap/core": "^2.0.0-beta.174",
     "@tiptap/extension-bubble-menu": "^2.0.0-beta.55",
+    "@tiptap/extension-code-block": "^2.0.0-beta.37",
+    "@tiptap/extension-code-block-lowlight": "^2.0.0-beta.68",
     "@tiptap/extension-link": "^2.0.0-beta.36",
     "@tiptap/extension-mention": "^2.0.0-beta.95",
     "@tiptap/extension-placeholder": "^2.0.0-beta.48",
