--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "@tiptap/extension-table-row": "^2.0.0-beta.19",
     "@tiptap/extension-underline": "^2.0.0-beta.23",
     "@tiptap/starter-kit": "^2.0.0-beta.183",
-    "bali-view-components": "https://github.com/Grupo-AFAL/bali-view-components.git#tree-view-component",
+    "bali-view-components": "https://github.com/Grupo-AFAL/bali-view-components.git",
     "esbuild": "^0.14.28",
     "frontend-helpers": "https://github.com/Grupo-AFAL/frontend-helpers.git",
     "lodash.throttle": "^4.1.1",
