--- a/spec/fixtures/documentation/pages.yml
+++ b/spec/fixtures/documentation/pages.yml
@@ -1,9 +1,9 @@
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
-one:
-  title: MyString
-  description: MyString
+home_page:
+  title: Home Page
+  description: Home page description
 
-two:
-  title: MyString
-  description: MyString
+my_docs:
+  title: My Docs
+  description: My docs description
