Add basic tests

--- a/spec/fixtures/documentation/pages.yml
+++ b/spec/fixtures/documentation/pages.yml
@@ -1,9 +1,11 @@
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
-home_page:
-  title: Home Page
-  description: Home page description
+comedor_home_page:
+  title: Comedor Home Page
+  description: Comedor Home page description
+  workspace: comedor
 
-my_docs:
-  title: My Docs
-  description: My docs description
+comedor_recipes:
+  title: My Recipes
+  description: Comedor recipes
+  workspace: comedor
