--- a/spec/fixtures/documentation/workspaces.yml
+++ b/spec/fixtures/documentation/workspaces.yml
@@ -1,7 +1,9 @@
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
-one:
-  name: MyString
+comedor:
+  name: Comedor Ejecutivo
+  home_page: comedor_home_page
 
-two:
-  name: MyString
+guarderia:
+  name: Guardería
+  
