Configure Rspec, add tests and configure github action (#39)
* Run first spec and configure github action

* Configure Simplecov

* Remove coverage files from repo

* Set RAILS_ENV=test

* Remove test_helper

* require view_components on dummy app

* Eager load components

* Disable simplecov

* Remove outer documentation module from specs

* Remove dummy spec folder

* Disable eager loading

* Define view_component as dependency

* Update bali

* Configure DB and upload coverage to CodeClimate

* Remove old codeclimate action

* Reenable simplecov

* Add basic tests

* Add Page specs

* Add more tests

* Add more tests

* Remove public/assets

* Precompile assets before tests

* Try changes in manifest

* Add empty js file

* Add test to pages controller

* Add workspace tests

* Add more specs

* Cleanup

* Remove documentation_manifest from dummy

--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,16 @@
 /log/*.log
 /pkg/
 /tmp/
+
+/node_modules
+yarn-error.log
+yarn-debug.log*
+.yarn-integrity
+.env
+
+/coverage
+
 /spec/dummy/log/*.log
 /spec/dummy/storage/
 /spec/dummy/tmp/
-/node_modules
+/spec/dummy/public/
