--- a/.github/workflows/rspec.yml
+++ b/.github/workflows/rspec.yml
@@ -4,6 +4,8 @@ on:
     branches: [main]
   pull_request:
     branches: [main]
+    types: [ opened, reopened, synchronize, ready_for_review ]
+
   workflow_call:
     secrets:
       CC_TEST_REPORTER_ID:
