--- a/.github/workflows/rspec.yml
+++ b/.github/workflows/rspec.yml
@@ -15,6 +15,7 @@ on:
 jobs:
   test:
     runs-on: ubuntu-latest
+    if: github.event.pull_request.draft == false
     services:
       postgres:
         image: postgres:11-alpine
