--- a/package.json
+++ b/package.json
@@ -2,24 +2,8 @@
   "dependencies": {
     "@hotwired/stimulus": "^3.1.0",
     "@hotwired/turbo-rails": "^7.1.3",
-    "@tiptap/core": "^2.0.0-beta.174",
-    "@tiptap/extension-bubble-menu": "^2.0.0-beta.55",
-    "@tiptap/extension-code-block": "^2.0.0-beta.37",
-    "@tiptap/extension-code-block-lowlight": "^2.0.0-beta.68",
-    "@tiptap/extension-image": "^2.0.0-beta.27",
-    "@tiptap/extension-link": "^2.0.0-beta.36",
-    "@tiptap/extension-mention": "^2.0.0-beta.95",
-    "@tiptap/extension-placeholder": "^2.0.0-beta.48",
-    "@tiptap/extension-table": "^2.0.0-beta.48",
-    "@tiptap/extension-table-cell": "^2.0.0-beta.20",
-    "@tiptap/extension-table-header": "^2.0.0-beta.22",
-    "@tiptap/extension-table-row": "^2.0.0-beta.19",
-    "@tiptap/extension-underline": "^2.0.0-beta.23",
-    "@tiptap/starter-kit": "^2.0.0-beta.183",
     "bali-view-components": "https://github.com/Grupo-AFAL/bali-view-components.git",
-    "esbuild": "^0.14.28",
-    "lodash.throttle": "^4.1.1",
-    "tippy.js": "^6.3.7"
+    "esbuild": "^0.14.28"
   },
   "scripts": {
     "build": "esbuild app/javascript/documentation/application.js --bundle --loader:.png=dataurl --sourcemap --outdir=app/assets/javascripts/documentation"
