--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "dependencies": {
     "@hotwired/stimulus": "^3.1.0",
     "@hotwired/turbo-rails": "^7.1.3",
-    "bali-view-components": "https://github.com/Grupo-AFAL/bali-view-components.git",
+    "bali-view-components": "https://github.com/Grupo-AFAL/bali-view-components.git#update-gems-and-npm-packages",
     "esbuild": "^0.17.0"
   },
   "scripts": {
