--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "dependencies": {
     "@hotwired/stimulus": "^3.2.2",
     "@hotwired/turbo-rails": "^7.3.0",
-    "bali-view-components": "https://github.com/Grupo-AFAL/bali-view-components.git",
+    "bali-view-components": "https://github.com/Grupo-AFAL/bali-view-components.git#fix-slim-select",
     "esbuild": "^0.20.0"
   },
   "scripts": {
