--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "dependencies": {
     "@hotwired/stimulus": "^3.2.2",
-    "@hotwired/turbo-rails": "^7.3.0",
-    "bali-view-components": "https://github.com/Grupo-AFAL/bali-view-components.git",
+    "@hotwired/turbo-rails": "^8.0.4",
+    "bali-view-components": "https://github.com/Grupo-AFAL/bali-view-components.git#update-gems-and-npm-packages",
     "esbuild": "^0.20.0"
   },
   "scripts": {
